@@ -1,4 +1,5 @@
 HEAD
+    + Added virtualizerStatus and setVirtualizerStatus to Anste::Status
     + Added python-anste wrapper for python-selenium
     + Remove old Selenium 1.0 support
     + Remove deprecated Xen stuff
